<?xml version="1.0"?>
<package>
  <name>uav_comm_kfly</name>
  <version>0.0.0</version>
  <description>The uav_comm package</description>
  <maintainer email="emifre@todo.todo">emifre</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kfly_comm</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kfly_comm</run_depend>
  <run_depend>serial</run_depend>

  <export>
  </export>
</package>
